I don't know just running with it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li>
-                <a href="about_me/about_me.html"> About Me </a>
+                <a href="about_me/index.html"> About Me </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Very important link</a>
@@ -20,7 +20,7 @@
                 <a href=""> Whitewater Rafting Website</a>
             </li>
             <li>
-                <a href=""> Whitewater Rafting Site Plan</a>
+                <a href="wwr/siteplan-rafting.html"> Whitewater Rafting Site Plan</a>
             </li>
         </ul>
     </nav>
