--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href=""> Whitewater Rafting Website</a>
             </li>
             <li>
-                <a href="wwr/siteplan-rafting.html"> Whitewater Rafting Site Plan</a>
+                <a href="https://becksteadmckay.github.io/web_developement/wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan</a>
             </li>
         </ul>
     </nav>
