added wwr website to main index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Very important link</a>
             </li>
             <li>
-                <a href=""> Whitewater Rafting Website</a>
+                <a href="https://becksteadmckay.github.io/web_developement/wwr/index.html"> Whitewater Rafting Website</a>
             </li>
             <li>
                 <a href="https://becksteadmckay.github.io/web_developement/wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan</a>
