--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -59,8 +59,8 @@
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
         <td class="primary">[#004777]</td>
-        <td class="secondary">[[#ff7700]</td>
-        <td class="accent1">[#62929e]</td>
+        <td class="secondary">[#62929e]</td>
+        <td class="accent1">[#ff7700]</td>
         <td class="accent2">[#efd28d]</td>
         <td class="accent3">[#00afb5]</td>
       </tr>
