--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-
-
-
     <title>WWR home</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -31,7 +28,7 @@
     
         </div>
         <section id = "hero-msg">
-            <h1 class = "home-title">Adventure</h1>
+            <h1 class = "home-title">Your Next Adventure!</h1>
             <h4>Make Memories with Dry Oar</h4>
             <div class = "button-box">
                 <a class = "book" href="rates.html">Book Now</a>
@@ -57,11 +54,7 @@
                 <img class="icon" src="images/oars.png" alt="oars icon">
                 <h2>Rapids</h2>
             </section>
-            <section class="rapids-card">
-                <img class="boat" src="images/rapids.jpg" alt="rafting boat">
-                <img class="oars" src="images/oars.png" alt="oars icon">
-                <h2>Rapids</h2>
-            </section>
+            
         </main>
 
         <div id="background"></div>
