centered adventure message

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li>
                 <a href="https://becksteadmckay.github.io/web_developement/wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan</a>
             </li>
+            <li><a href="resume/w07-personal-site-plan.html">resume site plan</a></li>
         </ul>
     </nav>
 </body>
