--- a/wwr/index2.html
+++ b/wwr/index2.html
@@ -13,16 +13,17 @@
 
 <div id="content">
     <header>
-        <a id="logo_link" href="index.html">
+        <a id="logo_link" href="index2.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="index2.html">Home</a>
+            <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
+    
     <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
