--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li>
-                <a href="about_me/index.html"> About Me </a>
+                <a href="about_me/index2.html"> About Me </a>
             </li>
             <li>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Very important link</a>
