--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -10,14 +10,16 @@
     <link rel="stylesheet" href="styles/style2.css">
     <style>
         form {
+
   /* Center the form on the page */
   margin: 0 auto;
   width: 400px;
+
+
   /* Form outline */
   padding: 1em;
   border: 1px solid #CCC;
   border-radius: 1em;
-  margin-top: 100px;
 }
 
 ul {
@@ -33,8 +35,8 @@ form li + li {
 label {
   /* Uniform size & alignment */
   display: inline-block;
-  width: 90px;
-  text-align: right;
+  width: 400px;
+  text-align: center;
 }
 
 input,
@@ -44,11 +46,12 @@ textarea {
   font: 1em sans-serif;
 
   /* Uniform text field size */
-  width: 300px;
+  width: 400px;
   box-sizing: border-box;
 
   /* Match form field borders */
   border: 1px solid #999;
+  /* text-align: center; */
 }
 
 input:focus,
@@ -78,6 +81,9 @@ button {
 form button {display: block; width: 20rem; margin: 0 auto;}
 form label {display: block;}
 
+main h2 {margin-top: 100px;
+text-align: center;}
+
     </style>
 
 </head>
@@ -95,42 +101,43 @@ form label {display: block;}
         </nav>
     </header>
     <main>
-        <!-- <form action="/response.html" method="post">
-            <label for="fname">name:</label>
-            <input type="text" name="fname" id="fname" placeholder="Bob" autofocus>
-
-            <label for="lname">last name:</label>
-            <input type="text" name="lname" id="lname" placeholder="Beckstead">
-
-            <label for="email">email:</label>
-            <input type="email" name="email" id="email" placeholder="bob.beckstead@gmail.com">
-
-            <label for="message">contact us:</label>
-            <input type="text" name="message" id="message" placeholder="I enjoyed the Rafting!">
-
-            <button type="submit">submit</button>
-
-        </form> -->
+      <div id="feedback">
+      </div>
+      <h2>Contact Us</h2>
         <form action="/my-handling-form-page" method="post">
             <ul>
              <li>
                <label for="name">Name:</label>
-               <input type="text" id="name" name="user_name" />
+               <input type="text" id="name" name="user_name" placeholder="Bob Beckstead" />
              </li>
              <li>
                <label for="mail">E-mail:</label>
-               <input type="email" id="mail" name="user_email" />
+               <input type="email" id="mail" name="user_email" placeholder="mckay4beckstead@gmail.com"/>
              </li>
              <li>
                <label for="msg">Message:</label>
-               <textarea id="msg" name="user_message"></textarea>
+               <textarea id="msg" name="user_message" placeholder="Best Water Rafting of my life!!!"></textarea>
              </li>
              <li>
-
-                <button type="button">submit </button>
+                <button type="submit">submit </button>
              </li>
-
-             
+             <script>
+              // get the feedback div element so we can do something with it.
+              const feedbackElement = document.getElementById('feedback');
+              // get the form so we can read what was entered in it.
+              const formElement = document.forms[0];
+              // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+              formElement.addEventListener('submit', function(e) {
+                  // stop the form from doing the default action.
+                  e.preventDefault();
+                  // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
+                  feedbackElement.innerHTML = 'Hello '+ formElement.name.value +'! Thank you for your message. We will get back with you as soon as possible!';
+                  // make the feedback element visible.
+                  feedbackElement.style.display = "block";
+                  // add a class to move everything down so our message doesn't cover it.
+                  document.body.classList.toggle('moveDown');
+              });
+          </script>
         
     </main>
     <footer>
@@ -138,7 +145,7 @@ form label {display: block;}
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
         <h3><a href="contactus.html">Contact Us</a></h3>
         <div class="social">
-            <a href="https://facebook.com" target="_blank">
+            <a href="https://facebook.com" target="_blank" >
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
