--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -95,7 +95,7 @@ text-align: center;}
         </a>
         <nav>
             <a href="index2.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
