--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -8,7 +8,8 @@
     <title>Rivers</title>
     <link rel="stylesheet" href="styles/style2.css">
 </head>
-<div id="content"><header>
+<div id="content">
+    <header>
     <a id="logo_link" href="index2.html">
         <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
     </a>
