adding personal site to index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <a href="https://becksteadmckay.github.io/web_developement/wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan</a>
             </li>
             <li><a href="resume/w07-personal-site-plan.html">resume site plan</a></li>
+            <li>
+                <a href="rank/index.html">rank website</a>
+            </li>
         </ul>
     </nav>
 </body>
