--- a/rank/index.html
+++ b/rank/index.html
@@ -24,6 +24,17 @@
         <h1 class="centered">McKay's Rankings</h1>
     </div>
 
+    <section id="mckay">
+        <h2>About McKay</h2>
+        <p>
+            McKay is known as an impartial movie judge with his peers. He is a movie-watching critic with unmatched
+            rating skills. He has watched all the movies he has rated. Some say McKay has some bias towards Toby McGuire
+            and Christian Bale, however, McKay says that's absurd. He would continue to say that Tobey McGuire and
+            Christian Bale are the best spider-man and batman.
+        </p>
+
+    </section>
+
 
     <section class="movie-sec">
         <div>
