--- a/rank/super-hero.html
+++ b/rank/super-hero.html
@@ -41,6 +41,14 @@
                 Movie Length:
             </h4>
             <p>2h 32m</p>
+            <p>
+                The Dark Knight has a depth that other superhero movies lack. There are times in the movie when it
+                doesn't feel like a superhero movie but a real-life situation. It is filled with thought-provoking
+                themes that can get anyone's mind turning. One theme this movie has is chaos. The Joker causes chaos in
+                Gotham. Heath Ledger's performance of the Joker was remarkable for anyone to watch. The Joker may be one
+                of the most compelling villains in a superhero movie. Someone who just wants to watch the world burn.
+
+            </p>
 
         </div>
     </section>
@@ -60,6 +68,17 @@
                 Movie Length:
             </h4>
             <p>2h 07m</p>
+            <p>
+                Spider-Man 2 is great. It has my favorite scene out of any superhero movie ever. Spider-Man chases the
+                villain Doc-Oc while trying to stop a train. Spider-man heroically sacrifices all his energy and
+                strength to stop the train then passes out. The passengers of the train catch him before he falls. The
+                scene becomes iconic when the passengers lift Spider-Man above them passing him to the next passenger
+                and so forth down the train. I love this movie because of the complex relationship between Mary Jane and
+                Peter Parker. Peter Parker doesn't want to be spider-man so he can spend time with Mary Jane. It
+                highlights a real personal conflict in Peter Parker's life. Peter Parker eventually sacrifices his
+                personal life to become Spider-Man.
+
+            </p>
 
         </div>
     </section>
@@ -79,6 +98,17 @@
                 Movie Length:
             </h4>
             <p>2h 10m</p>
+            <p>
+                Thor Ragnarok made my top three because it's entertaining and funny. Director Taika Waititi decided to
+                take the character of Thor in a new direction. Thor had previously had long gold locks in a movie with a
+                serious attitude. They also took away Thor's Hammer making him the God of Thunder, not the God of
+                Hammers. I loved the new Thor with a little bit of humor. I think everyone likes this Thor more because
+                this movie outperformed the other Thor movies at the box office. The reinvented Thor was a blast to
+                watch. Another thing this movie does well is it has an unexpected plot. I hate movies that are
+                predictable and follow the same superhero movie archetype. This movie was a present surprise. I didn't
+                expect the movie's ending.
+
+            </p>
 
         </div>
     </section>
