--- a/rank/spider-man.html
+++ b/rank/spider-man.html
@@ -21,7 +21,7 @@
     </header>
 
 
-    
+
     <h2>Top 10 Super-Hero Movies Ranked</h2>
 
     <section class="movie-sec">
@@ -40,6 +40,18 @@
                 Movie Length:
             </h4>
             <p>2h 07m</p>
+            <p>
+                Spider-Man 2 is great. It has my favorite scene out of any superhero movie ever. Spider-Man chases the
+                villain Doc-Oc while trying to stop a train. Spider-man heroically sacrifices all his energy and
+                strength to stop the train then passes out. The passengers of the train catch him before he falls. The
+                scene becomes iconic when the passengers lift Spider-Man above them passing him to the next passenger
+                and so forth down the train. I love this movie because of the complex relationship between Mary Jane and
+                Peter Parker. Peter Parker doesn't want to be spider-man so he can spend time with Mary Jane. It
+                highlights a real personal conflict in Peter Parker's life. Peter Parker eventually sacrifices his
+                personal life to become Spider-Man.
+
+
+            </p>
 
         </div>
     </section>
@@ -59,6 +71,14 @@
                 Movie Length:
             </h4>
             <p>2h 28m</p>
+            <p>
+                This movie did everything I have ever wanted and didn't disappoint. I love spider-man and would have
+                dreamed to see three different spider-man sharing the screen. A couple of my favorite villains the Green
+                Goblin and Doc Oc returned. There is a risk of overwhelming the audience with too many heroes and
+                villains. We can look at Spider-Man 3 and Spider-Man 2 to learn that lesson. However, this movie
+                balances so many characters perfectly. I loved the intercourse between the three Spider-Man which caused
+                a lot of funny scenes.
+            </p>
 
         </div>
     </section>
@@ -78,6 +98,14 @@
                 Movie Length:
             </h4>
             <p>2h 01m</p>
+            <p>
+                This is number 3 on my list because it is the best origin story of Spider-Man. Sam Raimi makes Peter
+                Parker is a very relatable teenager. Peter Parker is shown as a quiet dork who is too shy to ask out
+                Mary Jane. I love Willem Dafoe as the Green Goblin. I have realized a lot of the great superhero movies
+                aren't defined by the superhero but the villain and this is a great example of that. I loved how there
+                was a conflict in th Green Goblin's character.
+
+            </p>
 
         </div>
     </section>
@@ -85,7 +113,8 @@
     <div id="four-ten">
         <section>
             <h2>4.</h2>
-            <img class="movie-img" src="images/spider-man-into-the-multiverse.jpg" alt="spider-man into the multiverse photo">
+            <img class="movie-img" src="images/spider-man-into-the-multiverse.jpg"
+                alt="spider-man into the multiverse photo">
         </section>
         <section>
             <h2>5.</h2>
@@ -109,7 +138,7 @@
         </section>
         <section id="avengers-endgame">
             <h2>10.</h2>
-            
+
         </section>
 
     </div>
