--- a/rank/contact-us.html
+++ b/rank/contact-us.html
@@ -105,10 +105,11 @@
 <div id="content">
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="super-hero.html">Super Hero Movie Rankings</a>
-            <a href="spider-man.html">Spider-Man Movie Rankings</a>
-            <a href="contact-us.html">Contact Us</a>
+            <a href="index.html"><img id = "logo" src="images/tv-logo.png" alt="logo"></a>
+            <a class = "link" href="index.html">Home</a>
+            <a class = "link" href="super-hero.html">Super Hero Movie Rankings</a>
+            <a class = "link" href="spider-man.html">Spider-Man Movie Rankings</a>
+            <a class = "link" href="contact-us.html">Contact Us</a>
         </nav>
     </header>
 
