--- a/rank/personal-site-plan.html
+++ b/rank/personal-site-plan.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -10,7 +9,7 @@
 
 <body>
   <header>
-    <h1>Resume Site Plan</h1>
+    <h1>McKay's Rankings Site Plan</h1>
     <h2>McKay Beckstead</h2>
     <h2>WDD 130</h2>
     <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
@@ -21,23 +20,18 @@
     <hr>
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>Do you have a resume? How professional is it? Is there anything in your resume that separates you from others? I
-      know what will make a resume stand out above the others. It is going above and beyond. An Ice challenge you may
-      say. Employers receive tons of resumes. All the same made, out of paper or a web document. I say make your resume
-      a website. When reviewing resumes, they are simply more be more likely to remember yours. Employers can find your
-      web page without you sending a resume to them. Employers will send you job offers without you even approaching
-      them. You can easily update your resume and employers will immediately have the updated version. So what do you
-      say?</p> <!-- change this -->
+    <p>I am goint to rank the top ten super-hero movies on one page and the top 9 spider-man movies. There will be a
+      contact us page for people to send there opinions.</p> <!-- change this -->
 
 
     <h3>Audience</h3>
-    <p>Companies that would want to hire me. Schools I could go to. My future wife :) </p> <!-- change this -->
+    <p>People who like superhero movies. They will want to see my rankings.</p> <!-- change this -->
 
     <hr>
     <h2>Branding</h2>
-    <h3>McKay Beckstead</h3>
+    <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="\images\Screenshot 2022-02-19 163856.png" alt="Logo image">
+    <img src="images/tv-logo.png" alt="Logo image">
     <hr>
     <h2>
       Style Guide
@@ -51,24 +45,23 @@
     <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
     <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-    Palette URL: <a href="https://coolors.co/072ac8-1e96fc-a2d6f9-fcf300-ffc600"
-      target="_blank">https://coolors.co/072ac8-1e96fc-a2d6f9-fcf300-ffc600</a>
+    Palette URL: <a href="https://coolors.co/212121-808080-a9a9a9-add8e6"
+      target="_blank">https://coolors.co/212121-808080-a9a9a9-add8e6</a>
 
 
     <table class="colors">
       <tr>
-        <th>Primary Persian Blue
-        </th>
-        <th>Secondary Dodger Blue</th>
-        <th>Accent 1 Uranian Blue</th>
-        <th>Accent 2 White</th>
+        <th>Primary: light-blue</th>
+        <th>Secondary: Gray Web</th>
+        <th>Accent 1: Silver Chalice</th>
+        <th>Accent 2: Eerie Black</th>
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#072ac8]</td>
-        <td class="secondary">[#1e96fc]</td>
-        <td class="accent1">[#a2d6f9]</td>
-        <td class="accent2">[#fcfcfc]</td>
+        <td class="primary">[#add8e6]</td>
+        <td class="secondary">[#808080]</td>
+        <td class="accent1">[#Aa9a9a9]</td>
+        <td class="accent2">[#212121]</td>
       </tr>
     </table>
 
@@ -80,11 +73,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Dancing Script]
+      Heading Font: Helvetica
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Arial]
+      Paragraph Font: Helvetica
       <!-- change this -->
     </h4>
     <h3>
@@ -152,25 +145,78 @@
     </h2>
     <h3>Home page</h3>
     <p>
-      [Written copy for the home page here]
+      A little about the Rater:
+      McKay is known as an impartial movie judge with his peers. He is a movie-watching critic with unmatched rating
+      skills. He has watched all the movies he has rated. Some say McKay has some bias towards Toby McGuire and
+      Christian Bale, however, McKay says that's absurd. He would continue to say that Tobey McGuire and Christian Bale
+      are the best spider-man and batman.
+
     </p>
     <p>Images for the Home page</p>
-    <img src="#" alt="image for homepage">
-    <img src="#" alt="image for homepage">
+    <img src="images/rank.avif" alt="rank image">
+    <img src="images/comic-book.avif" alt="comic book">
+    <img src="images/spider-man-link.avif" alt="spider-man">
 
     </ul>
-    <h3>[Page 2]</h3>
+    <h3>Super-Hero Movie Rankings</h3>
     <p>
-      [Written copy for the Page 2 here]
+      The Dark Knight Thoughts
+      The Dark Knight has a depth that other superhero movies lack. There are times in the movie when it doesn't feel
+      like a superhero movie but a real-life situation. It is filled with thought-provoking themes that can get anyone's
+      mind turning. One theme this movie has is chaos. The Joker causes chaos in Gotham. Heath Ledger's performance of
+      the Joker was remarkable for anyone to watch. The Joker may be one of the most compelling villains in a superhero
+      movie. Someone who just wants to watch the world burn.
+
+
+      Spider-Man 2 Thoughts
+      Spider-Man 2 is great. It has my favorite scene out of any superhero movie ever. Spider-Man chases the villain
+      Doc-Oc while trying to stop a train. Spider-man heroically sacrifices all his energy and strength to stop the
+      train then passes out. The passengers of the train catch him before he falls. The scene becomes iconic when the
+      passengers lift Spider-Man above them passing him to the next passenger and so forth down the train. I love this
+      movie because of the complex relationship between Mary Jane and Peter Parker. Peter Parker doesn't want to be
+      spider-man so he can spend time with Mary Jane. It highlights a real personal conflict in Peter Parker's life.
+      Peter Parker eventually sacrifices his personal life to become Spider-Man.
+
+      Thor Ragnarok Thoughts
+      Thor Ragnarok made my top three because it's entertaining and funny. Director Taika Waititi decided to take the
+      character of Thor in a new direction. Thor had previously had long gold locks in a movie with a serious attitude.
+      They also took away Thor's Hammer making him the God of Thunder, not the God of Hammers. I loved the new Thor with
+      a little bit of humor. I think everyone likes this Thor more because this movie outperformed the other Thor movies
+      at the box office. The reinvented Thor was a blast to watch. Another thing this movie does well is it has an
+      unexpected plot. I hate movies that are predictable and follow the same superhero movie archetype. This movie was
+      a present surprise. I didn't expect the movie's ending.
+
     </p>
     <p>Images for the Page 2</p>
-    <img src="#" alt="image for page">
-    <img src="#" alt="image for page">
+    <img src="images/the-dark-knight.jpg" alt="The Dark Knight">
+    <img src="images/spider-man-2.jpg" alt="spider-man-2">
 
     </ul>
-    <h3>[Page 3]</h3>
+    <h3>Spider-Man Rankings</h3>
     <p>
-      [Written copy for the Page 3 here]
+      Spider-Man 2 Thoughts
+      Spider-Man 2 is great. It has my favorite scene out of any superhero movie ever. Spider-Man chases the villain
+      Doc-Oc while trying to stop a train. Spider-man heroically sacrifices all his energy and strength to stop the
+      train then passes out. The passengers of the train catch him before he falls. The scene becomes iconic when the
+      passengers lift Spider-Man above them passing him to the next passenger and so forth down the train. I love this
+      movie because of the complex relationship between Mary Jane and Peter Parker. Peter Parker doesn't want to be
+      spider-man so he can spend time with Mary Jane. It highlights a real personal conflict in Peter Parker's life.
+      Peter Parker eventually sacrifices his personal life to become Spider-Man.
+
+
+      Spider-Man: No Way Home Thoughts
+      This movie did everything I have ever wanted and didn't disappoint. I love spider-man and would have dreamed to
+      see three different spider-man sharing the screen. A couple of my favorite villains the Green Goblin and Doc Oc
+      returned. There is a risk of overwhelming the audience with too many heroes and villains. We can look at
+      Spider-Man 3 and Spider-Man 2 to learn that lesson. However, this movie balances so many characters perfectly. I
+      loved the intercourse between the three Spider-Man which caused a lot of funny scenes.
+
+      Spider-Man 1 Thoughts
+      This is number 3 on my list because it is the best origin story of Spider-Man. Sam Raimi makes Peter Parker is a
+      very relatable teenager. Peter Parker is shown as a quiet dork who is too shy to ask out Mary Jane. I love Willem
+      Dafoe as the Green Goblin. I have realized a lot of the great superhero movies aren't defined by the superhero but
+      the villain and this is a great example of that. I loved how there was a conflict in th Green Goblin's character.
+
     </p>
     <p>Images for the Page 3</p>
     <img src="#" alt="image for page3">
@@ -186,21 +232,21 @@
 
     <h3>Home</h3>
     <p>
-      [Any additional details about home that the wireframe does not make clear]
+     Top and bottom box are the header and footer.
     </p>
-    <img src="#" alt="home page wireframe">
+    <img src="images/main-page-wireframe.png" alt="home page wireframe">
 
-    <h3>[Page 2]</h3>
+    <h3>super-hero rankings</h3>
     <p>
-      [Any additional details about page 2 that the wireframe does not make clear]
+      Top and bottom box are the header and footer.
     </p>
-    <img src="#" alt="page 2 wireframe">
+    <img src="images/page-2-wireframe.png" alt="super-hero rankings wireframe">
 
-    <h3>[Page 3]</h3>
+    <h3>spider-man rankings</h3>
     <p>
-      [Any additional details about page 3 that the wireframe does not make clear]
+      Top and bottom box are the header and footer.
     </p>
-    <img src="#" alt="page 3 wireframe">
+    <img src="images/page-2-wireframe.png" alt="spider-man rankings wireframe">
   </main>
 </body>
 
