--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>
                 <a href="https://becksteadmckay.github.io/web_developement/wwr/site-plan-rafting.html"> Whitewater Rafting Site Plan</a>
             </li>
-            <li><a href="resume/w07-personal-site-plan.html">resume site plan</a></li>
+            <li><a href="rank/personal-site-plan.html">personal site plan</a></li>
             <li>
                 <a href="rank/index.html">rank website</a>
             </li>
