--- a/rank/personal-site-plan.html
+++ b/rank/personal-site-plan.html
@@ -219,8 +219,8 @@
 
     </p>
     <p>Images for the Page 3</p>
-    <img src="#" alt="image for page3">
-    <img src="#" alt="image for page3">
+    <img src="images/spider-man-1" alt="spider-man-1">
+    <img src="images/spider-man-into-the-multiverse.jpg" alt="into the spider-man-into-the-multiverse">
 
     </ul>
     <hr>
