--- a/rank/personal-site-plan.html
+++ b/rank/personal-site-plan.html
@@ -219,7 +219,7 @@
 
     </p>
     <p>Images for the Page 3</p>
-    <img src="images/spider-man-1" alt="spider-man-1">
+    <img src="images/spider-man-1.jpg" alt="spider-man-1">
     <img src="images/spider-man-into-the-multiverse.jpg" alt="into the spider-man-into-the-multiverse">
 
     </ul>
